<resources>
    <string name="app_name">Homeless App</string>
    <string name="buttonYA">Yes</string>
    <string name="buttonNA">No</string>
    <string name="buttonYC">Yes</string>
    <string name="buttonNC">No</string>
    <string name="buttonMG">Male</string>
    <string name="buttonFG">Female</string>
    <string name="TellUs">Tell us about yourself so we can personalize your search results:</string>
    <string name="welcome">Welcome to UnderCover!</string>
    <string name="stringGender">Gender</string>
    <string name="stringChildren">Do you have children?</string>
    <string name="stringBirth">Are you under 18?</string>
    <string name="buttonNext">NEXT</string>
    <string name="buttonshelter">Shelter</string>
    <string name="buttonfoodbank">Food Bank</string>
    <string name="buttonmeal">Meal</string>
    <string name="stringwhatare">What are you looking for?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="buttonBack">BACK</string>
    <string name="stringSGender">Gender</string>
    <string name="stringSChildren">Do you have children?</string>
    <string name="stringSBirth">Are you under 18?</string>
    <string name="buttonSMG">Male</string>
    <string name="buttonSFG">Female</string>
    <string name="buttonSYC">Yes</string>
    <string name="buttonSNC">No</string>
    <string name="buttonSYA">Yes</string>
    <string name="buttonSNA">No</string>
    <string name="change_preference">Change Preferences</string>
    <string name="item_option2">About Us</string>
    <string name="item_option1">Settings</string>
    <string name="item_option3">Option3</string>
    <string name="about_us">This app was programmed by ______
        Want to help?  Visit hfhseattle.org </string>
    <string name="about_us_title">About Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_deep_link">Deep Link</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    />
    />

</resources>
