<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apple.homelessapp.SelectionActivity">


    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonshelter"
        android:id="@+id/button21"

        android:layout_marginBottom="55dp"
        android:layout_above="@+id/button22"
        android:layout_alignLeft="@+id/button22"
        android:layout_alignStart="@+id/button22"
        android:onClick="sendMessage1" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonfoodbank"
        android:id="@+id/button22"
        android:layout_marginBottom="53dp"
        android:layout_above="@+id/button23"
        android:layout_alignLeft="@+id/button23"
        android:layout_alignStart="@+id/button23"
        android:onClick="sendMessage2"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonmeal"
        android:id="@+id/button23"
        android:layout_marginBottom="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringwhatare"
        android:id="@+id/textView7"
        android:layout_above="@+id/button21"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@android:drawable/ic_menu_preferences"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessageSettings"
        android:contentDescription="@null"/>

    <!--<fragment
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="installGooglePlay"
        />-->

</RelativeLayout>
